# WraithW60Library

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
docs/: OPENRGB.md
include/wraith/: WraithW60.h  WraithW60Device.h  WraithW60Error.h  WraithW60Leds.h  WraithW60Modes.h  WraithW60Protocol.h  WraithW60Types.h
signalrgb/: WraithW60.js  wraith_heatmap.html
src/cli/: CMakeLists.txt  wraith_cli.cpp  wraith_heatmap.cpp
src/core/: CMakeLists.txt  WraithW60Device.cpp  WraithW60Leds.cpp  WraithW60Modes.cpp  WraithW60Protocol.cpp
src/openrgb/: CMakeLists.txt  RGBController_WraithW60.cpp  RGBController_WraithW60.h  WraithW60Controller.cpp  WraithW60Controller.h  WraithW60ControllerDetect.cpp
src/platform/: HidDevice.cpp
tests/: CMakeLists.txt  test_allhid.cpp  test_enumerate.cpp  test_hidapi.cpp  test_protocol.cpp
